--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ logging.level.org.hibernate.SQL=debug
 #spring.jpa.show-sql=true
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+pago.api.seguridad.url=https://apitestenv.vnforapps.com/api.security/v1/security
+pago.api.ecommerce.url=https://apitestenv.vnforapps.com/api.ecommerce/v2/ecommerce
+pago.api.autorizacion.url=https://apitestenv.vnforapps.com/api.authorization/v3/authorization/ecommerce
+pago.api.credenciales=integraciones.visanet@necomplus.com:d5e7nk$M
+pago.api.merchantId=602545705
