--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 spring.application.name=universidadadmision
 server.port=9095
 #spring.application.name=admisionuniversidad
@@ -15,3 +16,7 @@ logging.level.org.hibernate.SQL=debug
 #spring.jpa.show-sql=true
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
