--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,9 @@ logging.level.org.hibernate.SQL=debug
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+pago.api.seguridad.url=https://apitestenv.vnforapps.com/api.security/v1/security
+pago.api.ecommerce.url=https://apitestenv.vnforapps.com/api.ecommerce/v2/ecommerce
+pago.api.autorizacion.url=https://apitestenv.vnforapps.com/api.authorization/v3/authorization/ecommerce
+pago.api.credenciales=integraciones.visanet@necomplus.com:d5e7nk$M
+pago.api.merchantId=602545705
