--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-
 spring.application.name=universidadadmision
-server.port=9095
+server.port=${PUERTO}
 #spring.application.name=admisionuniversidad
 ##spring.jackson.locale=es_PE
-spring.datasource.url=jdbc:sqlserver://10.100.14.55;instanceName=INSDESUAP;databaseName=BDACADEMICO03112022;encrypt=true;trustServerCertificate=true
-spring.datasource.username=devwebapp
-spring.datasource.password=devwebapp
+spring.datasource.url=${URL}
+spring.datasource.username=${USERDB}
+spring.datasource.password=${PASSWORDDB}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.generate-ddl=false
