--- a/src/main/resources/basedatos.properties
+++ b/src/main/resources/basedatos.properties
@@ -1,5 +1,5 @@
 PUERTO=9095
 DATABASE=BDACADEMICO03112022
-URL=jdbc:sqlserver://10.100.14.55;instanceName=INSDESUAP;databaseName=BDACADEMICO03112022;encrypt=true;trustServerCertificate=true
-USERDB=devwebapp
-PASSWORDDB=devwebapp
+URL=jdbc:sqlserver://10.100.14.39;databaseName=BDACADEMICO;encrypt=true;trustServerCertificate=true
+USERDB=usrBdAcademico
+PASSWORDDB=#EG%&vdT&
