--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,11 @@ pago.api.ecommerce.url=https://apitestenv.vnforapps.com/api.ecommerce/v2/ecommer
 pago.api.autorizacion.url=https://apitestenv.vnforapps.com/api.authorization/v3/authorization/ecommerce
 pago.api.credenciales=integraciones.visanet@necomplus.com:d5e7nk$M
 pago.api.merchantId=602545705
+
+spring.mail.host=smtp.office365.com
+spring.mail.username=comprobantes_uap2@uap.edu.pe
+spring.mail.password=Quv53270
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
