--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,22 @@
 			<artifactId>mssql-jdbc</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
+    	<dependency>
+	        <groupId>org.springframework.boot</groupId>
+    	    <artifactId>spring-boot-starter-mail</artifactId>
+    	</dependency>
+
+		<!-- Jakarta Mail -->
+	    <dependency>
+	        <groupId>jakarta.mail</groupId>
+	        <artifactId>jakarta.mail-api</artifactId>
+	        <version>2.1.3</version> <!-- O la versión más reciente -->
+	    </dependency>
+	    <dependency>
+	        <groupId>org.eclipse.angus</groupId>
+	        <artifactId>angus-mail</artifactId>
+	        <version>2.0.3</version> <!-- Implementación de Jakarta Mail -->
+	    </dependency>
 	</dependencies>
 
 	<build>
