--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,10 +26,17 @@ pago.api.autorizacion.url=https://apitestenv.vnforapps.com/api.authorization/v3/
 pago.api.credenciales=integraciones.visanet@necomplus.com:d5e7nk$M
 pago.api.merchantId=602545705
 
-spring.mail.host=smtp.office365.com
-spring.mail.username=comprobantes_uap2@uap.edu.pe
-spring.mail.password=Quv53270
-spring.mail.port=587
+#spring.mail.host=smtp.office365.com
+#spring.mail.username=comprobantes_uap2@uap.edu.pe
+#spring.mail.password=Quv53270
+#spring.mail.port=587
+spring.mail.host=${MAILHOST}
+spring.mail.username=${MAILUSERNAME}
+spring.mail.password=${MAILPASSWORD}
+spring.mail.port=${MAILPORT}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
