--- a/src/main/resources/basedatos.properties
+++ b/src/main/resources/basedatos.properties
@@ -6,8 +6,16 @@ PUERTO=9095
 #PASSWORDDB=devwebapp
 
 DATABASE=BDACADEMICO
-=======
-DATABASE=BDACADEMICO
 URL=jdbc:sqlserver://10.100.14.39;databaseName=BDACADEMICO;encrypt=true;trustServerCertificate=true
 USERDB=usrBdAcademico
 PASSWORDDB=#EG%&vdT&
+
+#MAILHOST=smtp.office365.com
+#MAILUSERNAME=comprobantes_uap2@uap.edu.pe
+#MAILPASSWORD=Quv53270
+#MAILPORT=587
+
+MAILHOST=mail.politecnica.edu.pe
+MAILUSERNAME=envio_admision@politecnica.edu.pe
+MAILPASSWORD=AbGJvUw46A*
+MAILPORT=587
