cambio de servicios con query a procedures, packaging war

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.universidadadmision.produccion</groupId>
 	<artifactId>universidadadmision</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>universidadadmision</name>
 	<description>Universidad Admision</description>
 	<url/>
@@ -30,6 +31,11 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
